Add files/upload endpoint.
